# SEMP

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: stereo_level2_swaves_20100117_v01.cdf  wi_h1_wav_20100117_v01.cdf
data/202006/: SEMP4sc.ipynb  data_PSP.ipynb
demo/: SEMP.ipynb  data_PSP_WI_STE_SOLO.ipynb  data_WI_STE.ipynb
demo-ipynb/: SEMP.ipynb  SEMP20200721.ipynb  SEMP3sc.ipynb  data_WI_STE.ipynb  plot_PSP_WI_STE_SOLO.ipynb  read_PSP_mark_arrival.ipynb  read_cdf_WI_STE_save_npz.ipynb
matlabSEMP/: get_arrival_time.m  sensitive_calc.m
matlabSEMP/gui_v2/: draw_result_parker_signal_harmo.m  draw_result_parker_signal_harmo2.m  loadData.fig
matlabsemp/: draw_result_parker_signal.m  draw_ste_ab_wind_esti.m  draw_stereo_wind_selected.m  func_dt2_pso.m  func_dt2_pso_split.m  func_t_pso.m  get_r_from_f.m  read_data_wind_stereo.m
matlabsemp/gui_v2/: arrivalTime.fig  color_vacu.m  frequencyChannels.fig  frequencyChannels.m  loadData.m  selectTimeRange.fig  selectTimeRange.m  test_ne_script.m  use_mdata_run_esti.m
pySEMP/: PSPdata.ipynb  README.md  SEMP.ipynb  SEMP.py  SEMP20200721.ipynb  SEMP4sc.ipynb  WI_STE_data.ipynb  data_PSP.ipynb  data_PSP_WI_STE_SOLO.ipynb  psp_dataprep.py  solo_dataprep.py
pysemp/: __init__.py  offset.npz  psp_dataprep.py  pysemp.py  solo_dataprep.py  solution.npz  spiral.npz
pysemp/tmpData/: STA_data.npz  WI_STA_LE.npz  WI_data.npz  psp_LE.npz
src/: draw_stereo_wind_preproc.m  func_t_pso_split.m  parameter_define_astro.m  processing_script.m  processing_split_script.m  runMe_gui.m
src/gui_v2/: arrivalTime.m  (+2 more)
(+8 files in other folders)
